# rhine-linux

./: cabal.project  flake.nix  fourmolu.yaml
.github/workflows/: ci.yml
kitchen-sink/: Main.hs  kitchen-sink.cabal
rhine-dbus/: CHANGELOG.md  rhine-dbus.cabal
rhine-dbus/src/FRP/Rhine/: DBus.hs
rhine-evdev/: CHANGELOG.md  rhine-evdev.cabal
rhine-evdev/src/FRP/Rhine/: Evdev.hs
rhine-i3/: CHANGELOG.md  rhine-i3.cabal
rhine-i3/src/FRP/Rhine/: I3.hs
rhine-inotify/: CHANGELOG.md  rhine-inotify.cabal
rhine-inotify/src/FRP/Rhine/: INotify.hs
rhine-udev/: CHANGELOG.md  rhine-udev.cabal
rhine-udev/src/FRP/Rhine/: UDev.hs
rhine-v4l2/: CHANGELOG.md  rhine-v4l2.cabal
rhine-v4l2/src/FRP/Rhine/: V4l2.hs
rhine-x11/: CHANGELOG.md  rhine-x11.cabal
rhine-x11/src/FRP/Rhine/: X11.hs
