cabal-version:       3.0
name:                rhine-v4l2
version:             0.1.0.0
synopsis:            Webcam frontend for Rhine
homepage:            https://github.com/ners/rhine-linux/blob/master/rhine-v4l2/README.md
license:             Apache-2.0
license-file:        LICENCE.md
author:              ners
maintainer:          ners@gmx.ch
bug-reports:         https://github.com/ners/rhine-linux/issues
category:            FRP
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md

source-repository head
  type:     git
  location: https://github.com/ners/rhine-linux

common common
    default-language: GHC2021
    ghc-options:
        -Weverything
        -Wno-unsafe
        -Wno-missing-safe-haskell-mode
        -Wno-missing-export-lists
        -Wno-missing-import-lists
        -Wno-missing-kind-signatures
        -Wno-all-missed-specialisations
    default-extensions:
        ApplicativeDo
        BlockArguments
        DataKinds
        DefaultSignatures
        DeriveAnyClass
        DeriveGeneric
        DerivingStrategies
        DerivingVia
        ExplicitNamespaces
        LambdaCase
        NoFieldSelectors
        NoImplicitPrelude
        OverloadedLabels
        OverloadedRecordDot
        OverloadedStrings
        PackageImports
        RecordWildCards
        RecursiveDo
        StrictData
        TypeFamilies
        ViewPatterns
    build-depends:
        base >= 4.16 && < 5,

library
    import:           common
    hs-source-dirs:   src
    exposed-modules:
        FRP.Rhine.V4l2,
    build-depends:
        JuicyPixels,
        rhine >= 1.2 && < 2,
        time,
        vector,
        v4l2,
    other-modules:
